# lucle

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  build.rs  certificate.pem  config.toml  package.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-container.yaml  build.yml  codeql.yml  release-chart.yaml  release.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  pvc.yaml  service.yaml
db/diesel/: db.sqlite
migrations/2021-11-29-201433_users/: up.sql
migrations/2024-07-05-093153_users/: up.sql
migrations/2024-07-12-051207_repositories/: down.sql  up.sql
migrations/2024-07-12-080252_users_repositories/: down.sql  up.sql
migrations/2025-09-23-105736-0000_plugins/: up.sql
proto/: lucle.proto  sparus.proto  speedupdate.proto
src/: App.tsx  database.rs  diesel.rs  diesel_sqlite.rs  errors.rs  http.rs  main.rs  main.tsx  models.rs  plugins.rs  query_helper.rs  routes.tsx  rpc.rs  schema.rs  surreal.rs  user.rs  utils.rs
src/components/admin/: Index.tsx  NavItem.tsx  Sidebar.tsx
src/layout/: Dashboard.tsx
src/templates/: email.html
web/: .gitignore  buf.gen.yaml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  adminRoutes.tsx  main.tsx  routes.tsx
web/src/assets/theme-dark/components/: container.tsx
web/src/assets/theme-dark/components/stepper/: stepLabel.tsx
web/src/assets/theme/base/: colors.tsx
web/src/assets/theme/components/table/: tableCell.tsx  tableContainer.tsx  tableHead.tsx
web/src/components/: AppNavbar.tsx  BuiltByDevelopers.tsx  Counters.tsx  CustomDatePicker.tsx  DatabaseInfo.tsx  DesignBlocks.tsx  Download.tsx  Editor.tsx  Header.tsx  Information.tsx  MenuContent.tsx  NavItem.tsx  Navbar.tsx  NavbarBreadcrumbs.tsx  Pages.tsx  SideMenu.tsx  SideMenuMobile.tsx  Sidebar.tsx  Signin.tsx  Signup.tsx  Testimonials.tsx
web/src/components/Avatar/: AvatarRoot.tsx  index.tsx
web/src/components/Badge/: index.tsx
web/src/components/Box/: index.tsx
web/src/components/Breadcrumbs/: index.tsx
web/src/components/Button/: ButtonRoot.tsx  index.tsx
web/src/components/Cards/: BackgroundBlogCard.tsx  Card.tsx  CenteredBlogCard.tsx  DefaultCounterCard.tsx  DefaultInfoCard.tsx  DefaultReviewCard.tsx  FilledInfoCard.tsx  RotatingCard.tsx  RotatingCardBack.tsx  RotatingCardFront.tsx  TransparentBlogCard.tsx
web/src/components/Configurator/: index.tsx
web/src/components/Input/: index.tsx
web/src/components/LayoutContainers/DashboardLayout/: index.tsx
web/src/components/Navbars/DashboardNavbar/: index.tsx
web/src/components/NotificationItem/: index.tsx
web/src/components/Pagination/: PaginationItemRoot.tsx  index.tsx
web/src/components/Sidenav/: SidenavCollapse.tsx  index.tsx
web/src/components/SocialButton/: index.tsx
web/src/components/Speedupdate/: Options.tsx
web/src/components/Typography/: TypographyRoot.tsx  index.tsx
web/src/components/data/: designBlocksData.js
web/src/context/: Auth.tsx  Luclerpc.tsx  Sparus.tsx  Speedupdate.tsx  index.tsx
web/src/internals/components/: CustomIcons.tsx
web/src/internals/data/: gridData.tsx
web/src/layout/: Dashboard.tsx
web/src/layouts/: Dashboard.tsx  Install.tsx
web/src/shared-theme/: AppTheme.tsx
web/src/shared-theme/customizations/: inputs.tsx  surfaces.tsx
web/src/theme/customizations/: charts.ts  dataGrid.ts  datePickers.ts  index.ts  treeView.ts
web/src/utils/: Api.ts  minio.tsx  rpc.ts  sparusrpc.ts  sparusrpc.tsx  speedupdaterpc.ts  speedupdaterpc.tsx
web/src/views/: AdminIndex.tsx  Editor.tsx  ForgotPassword.tsx  Index.tsx  Landing.tsx  Launcher.tsx  Login.tsx  Speedupdate.tsx  Tables.tsx
web/src/views/Install/: apiURL.tsx  createDB.tsx  createUser.tsx
web/src/views/Speedupdate/: BinariesTable.tsx  Index.tsx  Install.tsx  Launcher.tsx  PackagesTable.tsx  Repos.tsx  VersionsTable.tsx
web/templates/blog/: package.json
web/templates/blog/src/: App.tsx  routes.tsx
web/templates/blog/src/components/: Logo.tsx
web/templates/blog/src/components/admin/: Navbar.tsx  Sidebar.tsx
web/templates/blog/src/layout/: Dashboard.tsx  Main.tsx
web/templates/blog/src/views/: Login.tsx  Register.tsx
wit/: lucle.wit
