[package]
name = "lucle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.1", features = ["tokio", "http2"]}  
ftp = "3.0.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
diffy = "0.4.0"
prost = "0.13"
tokio = { version = "1.27", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
tonic = { git = "https://github.com/hyperium/tonic" }
tonic-web = { git = "https://github.com/MarkusTieger/tonic", features = ["axum"] }
tokio-stream = "0.1"
heck = "0.5.0"
hyper = "1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "add-extension", "util"] }
tracing = "0.1"
url = "2.2.2"
toml = "0.8.2"
toml_edit = "0.22"
serde = { version = "1.0.0", features = ["derive"] }
serde_regex = "1.1"
regex = "1.0.6"
syn = { version = "2", features = ["visit"] }
pki-types = { package = "rustls-pki-types", version = "1" }
rcgen = "0.13.1"
rustls-pemfile = "2.0.0"
argon2 = "0.5.2"
lettre = { version = "0.11.1", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls", "file-transport"] }
email-address-parser = "2.0.0"
minisign-verify = "0.2.1"
tera = "1.19.1"
futures-util = "0.3.29"
rustls-native-certs = "0.8.0"
hyper-util = "0.1.1"
tower-service = "0.3.2"
time = "0.3.30"
futures = "0.3"
jsonwebtoken = "9.3.0"
ring = "0.17.8"
base64 = "0.22.1"
thiserror = "2.0.0"
h2 = "0.4"
serde_json = "1.0.133"
mime_guess = "2.0.5"

# Database
diesel = { version = "2.2.2", features = ["chrono", "serde_json"] }
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5", features = ["async-connection-wrapper", "mysql", "postgres", "sqlite", "deadpool"]}
#mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"]}
diesel-derive-enum = { version = "2.1.0", features = ["mysql"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] } 
surrealdb = { version = "2.0", features = ["kv-surrealkv"] }

#[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
#mysqlclient-sys = { version = "0.4", features = ["bundled"] }
#pq-sys = { version = "0.6.1", features = ["bundled"] }
#mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"]}

# Mail server 
#[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
#common = { git = "https://github.com/stalwartlabs/mail-server"}
#smtp = { git = "https://github.com/stalwartlabs/mail-server" }
#store = { git = "https://github.com/stalwartlabs/mail-server", features = ["sqlite", "mysql", "postgres"]}
#imap = { git = "https://github.com/stalwartlabs/mail-server"}
#managesieve = { git = "https://github.com/stalwartlabs/mail-server" }
#utils = { git = "https://github.com/stalwartlabs/mail-server"}
#directory = { git = "https://github.com/stalwartlabs/mail-server"}
#jmap = { git = "https://github.com/stalwartlabs/mail-server"}
#pop3 = { git = "https://github.com/stalwartlabs/mail-server"}

# Wasm runtime
#[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
wasmtime = { version = "31.0.0", features = ["async"] }
wasmtime-wasi = "31.0.0"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic", features = ["prost"] } 
prost-build = "0.13"
protox = "0.7.1"
