[package]
name = "lucle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "http2"]}  
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
tokio = { version = "1.27", features = ["full"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["logging", "tls12", "ring"] }
tonic = "0.13"
tonic-web = { git = "https://github.com/MarkusTieger/tonic", features = ["axum"] }
tokio-stream = "0.1"
hyper = "1.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tower = { version = "0.5", features = ["make", "util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "add-extension", "util"] }
tracing = "0.1"
url = "2.2.2"
toml = "0.8.2"
toml_edit = "0.22"
serde = { version = "1.0.0", features = ["derive"] }
rcgen = "0.13.1"
rustls-pemfile = "2.0.0"
argon2 = { version = "0.5.2", features = ["std"] }
lettre = { version = "0.11.1", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls", "file-transport"] }
email-address-parser = "2.0.0"
tera = "1.19.1"
hyper-util = "0.1.1"
time = "0.3.30"
jsonwebtoken = "9.3.0"
base64 = "0.22.1"
thiserror = "2.0.0"
h2 = "0.4"
serde_json = "1.0.133"
http = "1.3.1"
prost = "0.14.0"
reqwest = { version = "0.12.15", default-features = false } 
wasmsign2 = "0.2.6"

# Database
diesel = { version = "2.2.8", features = ["chrono", "serde_json"] }
diesel_migrations = "2.2.0"
diesel-async = { version = "0.5", features = ["async-connection-wrapper", "mysql", "postgres", "sqlite", "deadpool"]}
#mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"]}
libsqlite3-sys = { version = "0.30", features = ["bundled"] } 



[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
# Database
#mysqlclient-sys = { version = "0.4", features = ["bundled"] }
#pq-sys = { version = "0.6.1", features = ["bundled"] }
# Wasm runtime
wasmtime = { version = "33.0.0", features = ["async"] }
wasmtime-wasi = "33.0.0"

[build-dependencies]
tonic-build = { version = "0.13", features = ["prost"] } 
prost-build = "0.13"
protox = "0.8.0"
